Conversion to BiocBook (#376)
* biocbook: add GHA workflows

* biocbook: move data to extdata

* biocbook: move general/figures to inst/pages/images

* biocbook: add vignettes

* biocbook: add book assets

* biocbook: update package files

* biocbook: purge un-necessary files

* biocbook: migrate Rmd to qmd and fix xrefs

* biocbook: fix aesthetics

* biocbook: add callout acknowledging miaverse in walcome page

* biocbook: improve README to include dev/author instructions

* biocbook: replace `js2264` by `microbiome`

* Add section on network learning (#303)

* Add section on network learning

* Update section on network learning

* Update network learning chapter

Make requested changes
Remove sections on network comparison

* Add network comparison chapter

* Update book.bib

* Update chapters on network learning and comparison

* biocbook: add `BiocBook` to `Suggests` for developers

* biocbook: transfer chaps 60/61 to inst/pages/

---------

Co-authored-by: Stefanie Peschel <stefpeschel@gmail.com>

--- a/inst/pages/11_taxonomic_information.qmd
+++ b/inst/pages/11_taxonomic_information.qmd
@@ -1,4 +1,5 @@
 # Taxonomic Information {#sec-taxonomic-information}
+# Taxonomic Information {#sec-taxonomic-information}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
@@ -118,7 +119,7 @@ specified taxonomic rank.
 head(getUniqueFeatures(tse, rank = "Phylum"))
 ```
 
-### Generate a hierarchy tree on the fly {#sec-fly-tree}
+### Generate a taxonomic tree on the fly {#sec-fly-tree}
 
 To create a hierarchy tree, `getHierarchyTree` used the information and returns a
 `phylo` object. Duplicate information from the `rowData` is removed.
@@ -135,6 +136,7 @@ tse
 The implementation is based on the `toTree` function from the
 `TreeSummarizedExperiment` package [@R_TreeSummarizedExperiment].
 
+## Data agglomeration {#sec-data-agglomeration}
 ## Data agglomeration {#sec-data-agglomeration}
 
 One of the main applications of taxonomic information in regards to count data
@@ -190,6 +192,7 @@ assay(altExp(tse, "Species_byPrevalence"), "relabundance")[88:92, 1:7]
 tseGlobalPatterns <- tse
 ```
 
+### Taxa clustering {#sec-taxa-clustering}
 ### Taxa clustering {#sec-taxa-clustering}
 Another way to agglomerate the data is to cluster the taxa. To do so,
 we usually start by doing a compositionality aware transformation such as CLR, 
@@ -276,7 +279,6 @@ tse_merged
 ```
 We can note that it worked as planned since there were 5 clusters and there are
 now 5 rows.
-
 
 ## Data transformation {#sec-assay-transform}
 
@@ -405,5 +407,3 @@ You can now view the entire list of abundance assays in your data object with:
 ```{r}
 assays(tse)
 ```
-
-
