--- a/inst/pages/20_beta_diversity.qmd
+++ b/inst/pages/20_beta_diversity.qmd
@@ -1,5 +1,7 @@
 # Community Similarity {#sec-community-similarity}
 
+# Community Similarity {#sec-community-similarity}
+
 ```{r setup, echo = FALSE, results = "asis"}
 library(rebook)
 chapterPreamble()
@@ -58,6 +60,7 @@ Reduction (UMAP), whereas the latter is mainly represented by distance-based
 Redundancy Analysis (dbRDA). We will first discuss unsupervised ordination
 methods and then proceed to supervised ones.
 
+## Unsupervised ordination {#sec-unsupervised-ordination}
 ## Unsupervised ordination {#sec-unsupervised-ordination}
 
 Unsupervised ordination methods variation in the data without additional
@@ -205,6 +208,7 @@ plotReducedDim(tse, "Unifrac",
                colour_by = "Group")
 ```
 
+### Other ordination methods {#sec-other-ord-methods}
 ### Other ordination methods {#sec-other-ord-methods}
 
 Other dimension reduction methods, such as PCA and UMAP, are inherited from the
@@ -396,6 +400,7 @@ approach complements the previous results obtained with PERMANOVA.
 ## Case studies
 
 #### Visualizing the most dominant genus on PCoA {#sec-pcoa-genus}
+#### Visualizing the most dominant genus on PCoA {#sec-pcoa-genus}
 
 In this section, we visualize the most dominant genus on PCoA. A similar
 visualization was proposed by [-@Salosensaari2021]. First, let us agglomerate the
@@ -429,6 +434,7 @@ tse_genus <- runMDS(tse_genus,
 ```
 
 Finally, we get the top taxa and and visualize their abundances on PCoA. Note
+that A 3D interactive version of the plot below can be found in [@sec-extras].
 that A 3D interactive version of the plot below can be found in [@sec-extras].
 
 ```{r}
@@ -495,6 +501,7 @@ plotReducedDim(tse_genus[ , colData(tse_genus)$Group == FALSE], "PCoA_BC",
 ```
 
 ### Testing differences in community composition between sample groups {#sec-dbrda-workflow}
+### Testing differences in community composition between sample groups {#sec-dbrda-workflow}
 
 Permutational Analysis of Variance (PERMANOVA; [-@Anderson2001]) is a
 widely used non-parametric multivariate method that aims to estimate
@@ -508,14 +515,12 @@ a different community composition. This method is implemented with the
 [`adonis2`](https://www.rdocumentation.org/packages/vegan/versions/2.4-2/topics/adonis)
 function from the vegan package.
 
-By default, the argument `by` is set to `"terms"`, in which the order
-of variables in the formula matters. In this case, each variable is
-analyzed sequentially, and the result is different when more than 1
-variable is introduced and their order differs.  Therefore, it is
-recommended to set `by = "margin"`, which specifies that the marginal
-effect of each variable is analyzed individually. You can view a
-comparison between the two designs in chapter
-[@sec-compare-permanova].
+By default, the argument `by` is set to `"terms"`, in which the order of variables
+in the formula matters. In this case, each variable is analyzed sequentially, and
+the result is different when more than 1 variable is introduced and their order differs.
+Therefore, it is recommended to set `by = "margin"`, which specifies that the
+marginal effect of each variable is analyzed individually. You can view a
+comparison between the two designs in chapter [@sec-compare-permanova].
 
 We can perform PERMANOVA either with `adonis2` function or by first
 performing dbRDA and then applying permutational test its results. An
@@ -643,7 +648,3 @@ For more information on sample clustering, you can refer to:
 
 * [How to extract information from clusters](http://bioconductor.org/books/release/OSCA/clustering.html)  
 * Chapter [@sec-clustering] on community typing  
-
-
-
-
