--- a/inst/pages/90_acknowledgments.qmd
+++ b/inst/pages/90_acknowledgments.qmd
@@ -1,4 +1,5 @@
 # Contributions
+# Contributions
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
@@ -84,14 +85,8 @@ key authors/contributors include:
 
 - *Lu Yang* 
 
-- *Katariina Pärnänen*
-
 - *Jacques Serizay* converted the _OMA_ book to the `BiocBook` format. This 
 allows the _OMA_ book to be built and distributed by Bioconductor. 
-
-- *Himel Mallick, PhD, FASA*, principal investigator and tenure-track faculty at Cornell University’s Department of Population Health Sciences and an adjunct faculty of Statistics and Data Science at Bowers College of Computing and Information Science. He contributed to the chapters on meta-analyses, microbe set enrichment analysis (MSEA) and multi-omics prediction and classification.
-
-- *Yihan Liu*, assisted Dr. Mallick in writing the chapters on meta-anlayses, MSEA and multi-omics prediction and classification. 
 
 ### Acknowledgments {-}
 
@@ -117,6 +112,7 @@ supporting the _TreeSummarizedExperiment_ ecosystem for microbiome
 research, including but not limited to the R packages mia, miaViz,
 miaTime, miaSim, philr, ANCOMBC, curatedMetagenomicData, scater,
 scuttle, and other packages, some of which are listed in Section
+[@sec-ecosystem]. A number of other contributors have advanced the
 [@sec-ecosystem]. A number of other contributors have advanced the
 ecosystem further, and will be acknowledged in the individual
 packages, [pull
