--- a/inst/pages/98_exercises.qmd
+++ b/inst/pages/98_exercises.qmd
@@ -1,4 +1,5 @@
 # Exercises {#sec-exercises}
+# Exercises {#sec-exercises}
 
 Here you can find assignments on different topics. 
 
@@ -58,7 +59,12 @@ languages, so that both the analytical pipeline and verbal description can be
 put in one place. In this exercise, we learn how to write and run code in Quarto.
 
 1. Open RStudio and create a new Quarto file.  
+1. Open RStudio and create a new Quarto file.  
 2. Initialize a code chunk by pressing `alt` + `cmd` + `i` and define the variables
+   `A <- "my name"` and `B <- 0` in it.  
+3. Write the text `Below is my first code chunk` just above the code chunk.  
+4. Initialize one more code chunk and add 100 to the variable `B` in it.   
+5. Write the text `Below I change variable B` just above the second chunk.  
    `A <- "my name"` and `B <- 0` in it.  
 3. Write the text `Below is my first code chunk` just above the code chunk.  
 4. Initialize one more code chunk and add 100 to the variable `B` in it.   
@@ -66,6 +72,7 @@ put in one place. In this exercise, we learn how to write and run code in Quarto
 6. **Extra**: Write the following line of text: `my name is A and I am B years old`,
    where A and B are variables defined in the code chunks upstream and change if
    those variables are modified. Be aware that inline code can be added as
+   `> r my_inline_command` (without `>`).  
    `> r my_inline_command` (without `>`).  
    
 Good job. You are now able to combine text and code in a Quarto document. If you
@@ -81,6 +88,11 @@ syntax `#| option-name: value`, also described
 [here](https://quarto.org/docs/computations/r.html#chunk-options).
 In this exercise, we explore part of the knitr potential.
 
+1. Open RStudio and create a new Quarto file.  
+2. Initialize three code chunks and label them as `setup`, `fig-box` and 
+   `tbl-coldata`, respectively. Remember that the name of a chunk can be 
+   specified with the `label` option.  
+3. Write the following code in the corresponding chunk and render the document.  
 1. Open RStudio and create a new Quarto file.  
 2. Initialize three code chunks and label them as `setup`, `fig-box` and 
    `tbl-coldata`, respectively. Remember that the name of a chunk can be 
@@ -119,14 +131,18 @@ knitr::kable(head(colData(tse)))
 4. Set `include: false` in the `setup` chunk, `fig-width: 10` in the `fig-box`
    chunk and `echo: false` in the `tbl-coldata` chunk. Render the document again
    and find the differences from before.  
+   and find the differences from before.  
 5. Add the options `fig-cap` and `tab-cap` to the `fig-box` and `tbl-coldata`
    chunks, respectively. They require some text input, which makes for the
+   caption of the figures or tables.  
    caption of the figures or tables.  
 6. **Extra**: Create a cross-reference to `fig-box` and `tbl-coldata` in the
    text above the respective code chunk. You can do that with the syntax
    `@chunk-name`.  
+   `@chunk-name`.  
 7. **Extra**: Define a custom folder for storing figures with `fig-path`. Insert
    it in `knitr::opts_chunk$set`, so that it applies globally to all the figures
+   generated in the document.  
    generated in the document.  
    
 Congratulations! You are now familiar with the great potential and flexibility
@@ -144,12 +160,17 @@ available [here](https://quarto.org/docs/reference/formats/html.html). In this
 exercise, we will get a tiny taste of such functionality.
 
 1. Open RStudio and create a new Quarto file.  
+1. Open RStudio and create a new Quarto file.  
 2. In the yaml box at the beginning of the document, change the title from
+   `Untitled` to `My first Quarto`.  
    `Untitled` to `My first Quarto`.  
 4. In the same box, add the two lines `author` and `date` followed by your name
    and today's date, respectively.  
 5. Render the document and check its appearance.  
+   and today's date, respectively.  
+5. Render the document and check its appearance.  
 6. **Extra**: Set `toc: true` to produce a table of contents. This line should
+   follow `format` and `html` at the second level of indentation.  
    follow `format` and `html` at the second level of indentation.  
    
 Well done! Now you are able to specify yaml options and understand how they
@@ -164,11 +185,17 @@ externally pre-defined variables that are also accessible in the Quarto document
 They can be specified in the yaml box as `params`. Here we learn how to use them.
 
 1. Open RStudio and create a new Quarto file.  
+1. Open RStudio and create a new Quarto file.  
 2. In the yaml box at the beginning of the document, add a line named `params`
    followed by an indented line with `gamma: 10`  
 3. Initialize a code chunk and type `str(params$gamma)` in it.  
 4. Render the document and check what happened.  
+   followed by an indented line with `gamma: 10`  
+3. Initialize a code chunk and type `str(params$gamma)` in it.  
+4. Render the document and check what happened.  
 5. Define one more parameter `beta: 3` and multiply `gamma` by `beta` in a code
+   chunk below.  
+6. Render the document again and check what happened.  
    chunk below.  
 6. Render the document again and check what happened.  
 
@@ -183,19 +210,25 @@ TreeSE containers represent the working unit of the mia package. In the
 following exercises we learn how to construct, explore and work with them.
 A few demo datasets can be imported with mia and can be accessed as explained
 in chapter [@sec-example-data].
+in chapter [@sec-example-data].
 
+### Constructing a data object {#sec-construct-TreeSE}
 ### Constructing a data object {#sec-construct-TreeSE}
 
 Here we cover how to construct a TreeSE from CSV files, using the components
 of OKeefeDSData from the microbiomeDataSets package as an example dataset.
 
 1. Fetch or download the files in [this directory](https://github.com/microbiome/data/tree/main/OKeefeDSData).  
+1. Fetch or download the files in [this directory](https://github.com/microbiome/data/tree/main/OKeefeDSData).  
 2. Read in the csv files with `read.csv` and store them into the variables
+   `assays`, `rowdata` and `coldata`, respectively.  
    `assays`, `rowdata` and `coldata`, respectively.  
 3. Create a TreeSE from the individual components with
    `TreeSummarizedExperiment`. Note that the function requires three arguments:
    assays, rowData and colData, to which you can give the appropriate item.  
+   assays, rowData and colData, to which you can give the appropriate item.  
 4. Check that importing is done correctly. E.g., choose random samples and
+   features, and check that their values equal between raw files and TreeSE.  
    features, and check that their values equal between raw files and TreeSE.  
 
 Usefuls functions: DataFrame, TreeSummarizedExperiment, matrix, rownames, colnames, SimpleList
@@ -204,6 +237,7 @@ Usefuls functions: DataFrame, TreeSummarizedExperiment, matrix, rownames, colnam
 
 Raw data of different types can be imported as a TreeSE with a number of
 functions explained in chapter [@sec-import-from-file]. You can also check the
+functions explained in chapter [@sec-import-from-file]. You can also check the
 [function reference in the mia package](https://microbiome.github.io/mia/reference/index.html).
 
 1. Get familiar with the
@@ -211,23 +245,27 @@ functions explained in chapter [@sec-import-from-file]. You can also check the
    and read the instructions in its
    [README](https://github.com/microbiome/data#training-microbiome-datasets)
    to import and construct datasets from there.  
-2. Import data from another format (functions: importMetaPhlAn | importMothur | 
-importQIIME2 | makeTreeSummarizedExperimentFromBiom | 
-makeTreeSummarizedExperimentFromDADA2 ...)  
+2. Import data from another format (functions: loadFromMetaphlan | loadFromMothur | loadFromQIIME2 | makeTreeSummarizedExperimentFromBiom | makeTreeSummarizedExperimentFromDADA2 ...)  
 3. Try out conversions between TreeSE and phyloseq data containers (makeTreeSummarizedExperimentFromPhyloseq; makephyloseqFromTreeSummarizedExperiment)  
 
 ### Preliminary exploration
 
 1. Import the mia package, load any of the example data sets mentioned in Chapter 3.3
    with `data` and store it into a variable named `tse`.  
+   with `data` and store it into a variable named `tse`.  
 2. Get a summary about the TreeSE with `summary`. What is the mean count across
+   samples? How many features recur only once (singletons)?  
    samples? How many features recur only once (singletons)?  
 3. Check the dimensions of the TreeSE with `dim` or alternatively with `nrow`
    and `ncol`. How many samples and features are present?  
 4. List sample and features names with `rownames` and `colnames`.  
+   and `ncol`. How many samples and features are present?  
+4. List sample and features names with `rownames` and `colnames`.  
 5. Check what information about samples and features is contained by the
    `colData` and `rowData` of the TreeSE with `names`.  
+   `colData` and `rowData` of the TreeSE with `names`.  
 5. **Extra**: Calculate the number of unique taxa for each taxonomic rank. You
+   can use `apply` to count unique elements for each column of rowData.  
    can use `apply` to count unique elements for each column of rowData.  
 
 ### Assay retrieval
@@ -236,122 +274,44 @@ makeTreeSummarizedExperimentFromDADA2 ...)
    with `data` and store it into a variable named `tse`.  
 2. List the names of all available assays with `assayNames`.  
 3. Fetch the list of assays with `assays`.  
+   with `data` and store it into a variable named `tse`.  
+2. List the names of all available assays with `assayNames`.  
+3. Fetch the list of assays with `assays`.  
 4. Retrieve the first assay of the TreeSE with `assay`, where the second
+   argument can be either the name or the index of the desired assay.  
    argument can be either the name or the index of the desired assay.  
    
 Well done! You can now locate and retrieve individual assays of a TreeSE. If you
+got stuck, you can refer to chapter [@sec-assay-slot] of this book.
 got stuck, you can refer to chapter [@sec-assay-slot] of this book.
 
 
 ### Sample information 
 
-1.  Import the mia package, load any of the example data sets mentioned
-    in Chapter 3.3 with `data` and store it into a variable named `tse`.
-
-```{r}
-#| label: sample-information-ex1
-#| eval: FALSE
-#| code-fold: true
-#| code-summary: "Show solution"
-
-library(mia)
-data("GlobalPatterns", package = "mia")
-tse <- GlobalPatterns
-```
-
-2.  Check the names of the samples with `colnames`.
-
-```{r}
-#| label: sample-information-ex2
-#| eval: FALSE
-#| code-fold: true
-#| code-summary: "Show solution"
-
-colnames(tse)
-```
-
-3.  List the information on samples available in colData with `names`.
-
-```{r}
-#| label: sample-information-ex_3
-#| eval: FALSE
-#| code-fold: true
-#| code-summary: "Show solution"
-
-names(colData(tse))
-```
-
-4.  Visualize the colData with `View` and briefly look at the
-    information stored in the different columns.
-
-```{r}
-#| label: sample-information-ex_4
-#| eval: FALSE
-#| code-fold: true
-#| code-summary: "Show solution"
-
-View(colData(tse))
-```
-
-5.  Get the abundances of all features for a specific sample, such as
-    `ID34`, for an *assay* of your choice.  
+1. Import the mia package, load any of the example data sets mentioned in Chapter 3.3
+   with `data` and store it into a variable named `tse`.  
+2. Check the names of the samples with `colnames`.  
+3. List the information on samples available in colData with `names`.  
+4. Visualize the colData with `View` and briefly look at the information stored
+   in the different columns.  
+3. Get the abundances of all features for a specific sample, such as `ID34`, for an _assay_ of your choice.  
 
 
 ### Feature information
 
-1.  Import the mia package, load any of the example data sets mentioned
-    in Chapter 3.3 with `data` and store it into a variable named `tse`.
-
-```{r}
-#| label: feature-information-ex1
-#| eval: FALSE
-#| code-fold: true
-#| code-summary: "Show solution"
-
-library(mia)
-data("GlobalPatterns", package = "mia")
-tse <- GlobalPatterns
-```
-
-2.  Check the names of the features with `rownames`.
-
-```{r}
-#| label: feature-information-ex2
-#| eval: FALSE
-#| code-fold: true
-#| code-summary: "Show solution"
-
-rownames(tse)
-```
-
-3.  List the information on features available in rowData with `names`.
-
-```{r}
-#| label: sample-information-ex3
-#| eval: FALSE
-#| code-fold: true
-#| code-summary: "Show solution"
-
-names(rowData(tse))
-```
-
-4.  Visualize the rowData with `View` and briefly look at the
-    information stored in the different columns.
-
-```{r}
-#| label: sample-information-ex4
-#| eval: FALSE
-#| code-fold: true
-#| code-summary: "Show solution"
-
-View(rowData(tse))
-```
-
+1. Import the mia package, load any of the example data sets mentioned in Chapter 3.3
+   with `data` and store it into a variable named `tse`.  
+2. Check the names of the features with `rownames`.  
+3. List the information on features available in rowData with `names`.  
+4. Visualize the rowData with `View` and briefly look at the information stored
+   in the different columns.  
 5. Get the abundances for a specific feature, such as `OTU1810`, in all the
    samples. You can access feature-specific abundances for an _assay_ of your choice.  
-6. **Extra**: Create a hierarchy tree based on the taxonomy mappings with
-   `addHierarchyTree` and display its content with `getHierarchyTree` and `ggtree`.  
+6. **Extra**: Create a taxonomy tree based on the taxonomy mappings with
+   `addTaxonomyTree` and display its content with `taxonomyTree` and `ggtree`.  
 
+If you got stuck, you can look up chapters [@sec-datamanipulation]
+and [@sec-fly-tree] on how to pick specific abundances and generate
 If you got stuck, you can look up chapters [@sec-datamanipulation]
 and [@sec-fly-tree] on how to pick specific abundances and generate
 row trees, respectively.
@@ -359,17 +319,20 @@ row trees, respectively.
 
 ### Other elements
 
-Extract some of the other TreeSE elements listed in chapter [@sec-containers].
+Try to extract some of the other TreeSE elements listed in chapter [@sec-containers].
 However, such data are not always included.
 
 1. Import the mia package, load any of the example data sets mentioned in Chapter 3.3
-   and store it into a variable named `tse`.  
-2. Fetch the metadata of the TreeSE. Is there any information available?  
+   with `data` and store it into a variable named `tse`.  
+2. Fetch the metadata of the TreeSE. Is there any iformation available?  
 3. Access the phylogenetic tree with `rowTree`. How big is it in terms of tips
+   and nodes. If you like you can visualize it with `ggtree`.  
    and nodes. If you like you can visualize it with `ggtree`.  
 4. Check if a sample tree is available with `colTree`, which is suitable for
    hierarchical or nested study designs.  
+   hierarchical or nested study designs.  
 5. If present, obtain the information on feature DNA sequences from the DNA
+   sequence slot.  
    sequence slot.  
 
 
@@ -378,9 +341,9 @@ However, such data are not always included.
 
 ### Subsetting
 
-1. Subset the TreeSE object to specific samples.  
-2. Subset the TreeSE object to specific features.  
-3. Subset the TreeSE object to specific samples and features.  
+1. Subset the TreeSE object to specific samples  
+2. Subset the TreeSE object to specific features  
+3. Subset the TreeSE object to specific samples and features  
 
 
 
@@ -388,11 +351,17 @@ However, such data are not always included.
 
 1. Calculate library sizes  
 2. Subsample / rarify the counts (see: subsampleCounts)  
+1. Calculate library sizes  
+2. Subsample / rarify the counts (see: subsampleCounts)  
 
 Useful functions: nrow, ncol, dim, summary, table, quantile, unique, addPerCellQC, mergeFeaturesByRank
 
 ### Prevalent and core taxonomic features
 
+1. Estimate prevalence for your chosen feature (row, taxonomic group)  
+2. Identify all prevalent features and subset the data accordingly   
+3. Report the thresholds and the dimensionality of the data before and after subsetting  
+4. Visualize prevalence  
 1. Estimate prevalence for your chosen feature (row, taxonomic group)  
 2. Identify all prevalent features and subset the data accordingly   
 3. Report the thresholds and the dimensionality of the data before and after subsetting  
@@ -406,11 +375,16 @@ Useful functions: getPrevalence, getPrevalentFeatures, subsetByPrevalentFeatures
 1. Summarize sample metadata variables. (How many age groups, how they are distributed? 0%, 25%, 50%, 75%, and 100% quantiles of library size?)  
 2. Create two histograms. Another shows the distribution of absolute counts, another shows how CLR transformed values are distributed.  
 3. Visualize how relative abundances are distributed between taxa in samples.  
+1. Summarize sample metadata variables. (How many age groups, how they are distributed? 0%, 25%, 50%, 75%, and 100% quantiles of library size?)  
+2. Create two histograms. Another shows the distribution of absolute counts, another shows how CLR transformed values are distributed.  
+3. Visualize how relative abundances are distributed between taxa in samples.  
 
 Useful functions: nrow, ncol, dim, summary, table, quantile, unique, transformAssay, ggplot, wilcox.test, mergeFeaturesByRank, plotAbundance
 
 ### Other functions
 
+1. Merge data objects (merge, mergeSEs)  
+2. Melt the data for visualization purposes (meltAssay)  
 1. Merge data objects (merge, mergeSEs)  
 2. Melt the data for visualization purposes (meltAssay)  
 
@@ -419,14 +393,21 @@ Useful functions: nrow, ncol, dim, summary, table, quantile, unique, transformAs
 
 1. Import the mia package, load any of the example data sets mentioned in Chapter 3.3
    with `data` and store it into a variable named `tse`.  
+   with `data` and store it into a variable named `tse`.  
 2. Transform the counts assay into relative abundances with `transformAssay` and
+   store it into the TreeSE as an assay named `relabund` (see chapter [@sec-assay-transform]).  
    store it into the TreeSE as an assay named `relabund` (see chapter [@sec-assay-transform]).  
 3. Similarly, perform a clr transformation on the counts assay with a `pseudocount`
    of 1 and add it to the TreeSE as a new assay.  
 4. List the available assays by name with `assays`.  
+   of 1 and add it to the TreeSE as a new assay.  
+4. List the available assays by name with `assays`.  
 5. Access the clr assay and select a subset of its first 100 features and 10
    samples. Remember that assays are subsettable with `assay[row_idx, col_idx]`.  
+   samples. Remember that assays are subsettable with `assay[row_idx, col_idx]`.  
 5. Take the same subset from the TreeSE, and check how this affects the individual
+   transformed assays. TreeSE can also be subsetted with `tse[row_idx, col_idx]`.  
+6. **Extra**: If the data has phylogenetic tree, perform the phILR transformation.  
    transformed assays. TreeSE can also be subsetted with `tse[row_idx, col_idx]`.  
 6. **Extra**: If the data has phylogenetic tree, perform the phILR transformation.  
 
@@ -439,13 +420,19 @@ Useful functions: nrow, ncol, dim, summary, table, quantile, unique, transformAs
    with `data` (you need one with taxonomic information at Phylum level)
    and store it into a variable named `tse`.  
 2. List the available taxonomic ranks in the data with `taxonomyRanks`.  
+   and store it into a variable named `tse`.  
+2. List the available taxonomic ranks in the data with `taxonomyRanks`.  
 3. Agglomerate the data to Phylum level with `mergeFeaturesByRank` and the
+   appropriate value for `Rank`.  
    appropriate value for `Rank`.  
 4. Report the dimensions of the TreeSE before and after agglomerating. You can
    use `dim` for that.  
 5. **Extra**: Perform CLR transformation on the data. Does this affect agglomeration?  
+   use `dim` for that.  
+5. **Extra**: Perform CLR transformation on the data. Does this affect agglomeration?  
 6. **Extra**: List full taxonomic information for a few selected taxa, such as
    `OTU1` and `OTU1368`. For that you can use `mapTaxonomy` on a specific subset
+   of the TreeSE.  
    of the TreeSE.  
 
 
@@ -453,14 +440,19 @@ Useful functions: nrow, ncol, dim, summary, table, quantile, unique, transformAs
 
 1. Import the mia package, load one of the example data sets mentioned in Chapter 3.3
    with `data` (you need one with taxonomic information) and store it into 
-   a variable named `tse`. Can you find the same taxonomyRanks from rowData? 
+   a variable named `tse`.  
 2. Check the taxonomic ranks of the features with `taxonomyRanks`. What is the
+   deepest taxonomic rank available?  
    deepest taxonomic rank available?  
 3. Agglomerate the TreeSE to each taxonomic rank and store the resulting
    experiments as altExps. This can be performed automatically with `splitByRanks`.  
+   experiments as altExps. This can be performed automatically with `splitByRanks`.  
 4. Check the names of the generated altExps with `altExpNames` and retrieve a
    complete list with `altExps`.  
+   complete list with `altExps`.  
 5. Retrieve the data agglomerated by genus from the corresponding `altExp`.
+   As for assays, you can access the desired altExp by name or index.  
+6. **Extra**: Split the data based on other features with `splitOn`.  
    As for assays, you can access the desired altExp by name or index.  
 6. **Extra**: Split the data based on other features with `splitOn`.  
 
@@ -602,6 +594,7 @@ find many of them under methods in the vignettes of `vegan::vegdist`.
 Good job! You are now able to produce and visualize reduced dimensions of a
 TreeSE. `runMDS` is actually one of several algorithms for PCoA and dimensionality
 reduction, which you can find in section [@sec-other-ord-methods].
+reduction, which you can find in section [@sec-other-ord-methods].
 
 ### PERMANOVA analysis
 
@@ -662,6 +655,7 @@ the contributions to beta diversity.
 ### Beta diversity analysis
 
 This exercise prompts you to implement a workflow with distance-based RDA
+(dbRDA). You can refer to chapter [@sec-dbrda-workflow] for a step-by-step
 (dbRDA). You can refer to chapter [@sec-dbrda-workflow] for a step-by-step
 walkthrough, which may be simplified in the future.
 
@@ -759,6 +753,7 @@ aldex_out %>%
    Gender? What is the problem with Age?
 
 ### Controlling for confounders {#sec-control-daa-confounders}
+### Controlling for confounders {#sec-control-daa-confounders}
 
 1. Import the mia and MicrobiomeStat packages, load any of the example data sets
    mentioned in Chapter 3.3 with `data` and store it into a variable named `tse`.
@@ -823,20 +818,6 @@ linda_res <- linda_out$output$AgeElderly
 5. Filter `linda_res` for features with `reject == TRUE`. How many differentially
    abundant taxa were found? What are their names and how significant are they
    in terms of log-fold change and adjusted p-value?
-   
-```{r}
-#| label: confounders-ex5
-#| eval: FALSE
-#| code-fold: true
-#| code-summary: "Show solution"
-
-linda_res %>%
-  filter(reject) %>%
-  dplyr::select(log2FoldChange, stat, padj) %>%
-  rownames_to_column(var = "feature")
-
-nrow(linda_res)
-```
 
 ### Comparing methods {#sec-compare-daa-methods}
 
@@ -1100,6 +1081,7 @@ experiments in the MAE.
    p-values from the cross-correlation analysis, repeat point 2 with the
    additional argument `test_significance = TRUE`.
 5. Visualize results with a heatmap similarly to the example in section
+   [@sec-cross-correlation]. Do you see any significant correlations?
    [@sec-cross-correlation]. Do you see any significant correlations?
    Interpret your results.
 6. **Extra**: Perform cross-correlation analysis between the remaining
