--- a/inst/pages/04_containers.qmd
+++ b/inst/pages/04_containers.qmd
@@ -1,4 +1,5 @@
 # Microbiome Data {#sec-containers}
+# Microbiome Data {#sec-containers}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
@@ -11,10 +12,12 @@ The building blocks of the framework are **data container**
 (SummarizedExperiment and its derivatives), **packages** from various
 developers using the TreeSE container, open **demonstration data
 sets**, in a separate chapter [@sec-example-data], and **online
+sets**, in a separate chapter [@sec-example-data], and **online
 tutorials** including this online book as well as the various package
 vignettes and other materials.
 
 ```{r echo=FALSE}
+knitr::include_graphics("images/FigureOverviewV2_mod.png")
 knitr::include_graphics("images/FigureOverviewV2_mod.png")
 ```
 
@@ -53,7 +56,9 @@ on how to represent different varieties of multi-table data within the
 `TreeSummarizedExperiment` class.
 
 The options and recommendations are summarized in [@tbl-options].
+The options and recommendations are summarized in [@tbl-options].
 
+### Assay data {#sec-assay-slot}
 ### Assay data {#sec-assay-slot}
 
 The original count-based taxonomic abundance tables may have different 
@@ -138,6 +143,7 @@ are not linked to nodes, and nodes, which are not linked to features. To change
 the links in an existing object, the `changeTree` function is available.
 
 ### Alternative experiments {#sec-alt-exp}
+### Alternative experiments {#sec-alt-exp}
 
 _**Alternative experiments**_ complement _assays_. They can contain
 complementary data, which is no longer tied to the same dimensions as
@@ -192,6 +198,7 @@ dim(altExp(tse[,1:10],"Phylum"))
 For more details on _altExp_, you can check the [introduction](https://bioconductor.org/packages/release/bioc/vignettes/SingleCellExperiment/inst/doc/intro.html) to the `SingleCellExperiment` package [@R_SingleCellExperiment].
 
 ### MultiAssayExperiments {#sec-mae}
+### MultiAssayExperiments {#sec-mae}
 
 _**Multiple experiments**_ relate to complementary measurement types,
 such as transcriptomic or metabolomic profiling of the microbiome or
@@ -223,7 +230,9 @@ For information have a look at the [intro vignette](https://bioconductor.org/pac
 MultiAssay            free      free (mapping)    Multi-omic experiments    
 
 : **Recommended options for storing multiple data tables in microbiome studies** The _assays_ are best suited for data transformations (one-to-one match between samples and columns across the assays). The _alternative experiments_ are particularly suitable for alternative versions of the data that are of same type but may have a different number of features (e.g. taxonomic groups); this is for instance the case with taxonomic abundance tables agglomerated at different levels (e.g. genus vs. phyla) or alternative profiling technologies (e.g. amplicon sequencing vs. shallow shotgun metagenomics). For alternative experiments one-to-one match between samples (cols) is libraryd but the alternative experiment tables can have different numbers of features (rows). Finally, elements of the _MultiAssayExperiment_ provide the most flexible way to incorporate multi-omic data tables with flexible numbers of samples and features. We recommend these conventions as the basis for methods development and application in microbiome studies. {#tbl-options}
+: **Recommended options for storing multiple data tables in microbiome studies** The _assays_ are best suited for data transformations (one-to-one match between samples and columns across the assays). The _alternative experiments_ are particularly suitable for alternative versions of the data that are of same type but may have a different number of features (e.g. taxonomic groups); this is for instance the case with taxonomic abundance tables agglomerated at different levels (e.g. genus vs. phyla) or alternative profiling technologies (e.g. amplicon sequencing vs. shallow shotgun metagenomics). For alternative experiments one-to-one match between samples (cols) is libraryd but the alternative experiment tables can have different numbers of features (rows). Finally, elements of the _MultiAssayExperiment_ provide the most flexible way to incorporate multi-omic data tables with flexible numbers of samples and features. We recommend these conventions as the basis for methods development and application in microbiome studies. {#tbl-options}
 
+## Demonstration data {#sec-example-data}
 ## Demonstration data {#sec-example-data}
 
 Open demonstration data for testing and benchmarking purposes is
@@ -231,6 +240,7 @@ available from multiple locations. This chapter introduces some
 options. The other chapters of this book provide ample examples about
 the use of the data.
 
+### Package data {#sec-package-data}
 ### Package data {#sec-package-data}
 
 The `mia` R package contains example datasets that are direct
@@ -241,6 +251,7 @@ List the [available
 datasets](https://microbiome.github.io/mia/reference/mia-datasets.html) in
 the `mia` package:
 
+```{r, message=FALSE}
 ```{r, message=FALSE}
 library(mia)
 data(package="mia")
@@ -254,12 +265,14 @@ GlobalPatterns
 ```
 
 #### Tengeler2020 {#sec-tengeler-desc}
+#### Tengeler2020 {#sec-tengeler-desc}
 
 Tengeler2020 is derived from a randomised blinded study on the effects of gut
 microbiome on attention-deficit/hyperactivity disorder (ADHD) in humanised mice
 [@Tengeler2020]. The dataset is briefly presented in
 [these slides](https://microbiome.github.io/outreach/tengeler2020_presentation.html).
 
+#### HintikkaXOData {#sec-hintikka-desc}
 #### HintikkaXOData {#sec-hintikka-desc}
 
 [HintikkaXOData](https://microbiome.github.io/microbiomeDataSets/reference/HintikkaXOData.html)
@@ -301,6 +314,7 @@ Data is available in `r Biocpkg("SummarizedExperiment")`, `r
 Biocpkg("TreeSummarizedExperiment")` and `r
 Biocpkg("MultiAssayExperiment")` data containers; see the separate
 page on [alternative containers](23_multi-assay_analyses.qmd) for more details.
+page on [alternative containers](23_multi-assay_analyses.qmd) for more details.
 
 ### Curated metagenomic data
 
@@ -320,24 +334,6 @@ library(curatedMetagenomicData)
 tse <- curatedMetagenomicData("Vatanen*", dryrun = FALSE, counts = TRUE)
 ```
 
-###  Human microbiome compendium
-
-[MicroBioMap](https://seandavi.github.io/MicroBioMap/) dataset includes 
-over 170k samples of publicly available 16S rRNA amplicon sequencing data, 
-all processed using the same pipeline and reference database[@Abdill2023].
-After installing the MicroBioMap package (see the [original website](https://github.com/seandavi/MicroBioMap#microbiome-compendium) for instructions), you can load the compendium with
-
-```{r, message=FALSE, eval=FALSE}
-library(MicroBioMap)
-cpd <- getCompendium()
-```
-
-This returns a TreeSummarizedExperiment object. Currently, 
-the "tree" part of the TreeSummarizedExperiment is not populated, but 
-that is on the roadmap[@compendiumpackage].
-
-After loading the compendium, you will have immediate access to nearly 170,000 microbiome samples of publicly available 16S rRNA amplicon sequencing data, all processed using the same pipeline and reference database. For more use examples in R/Bioconductor, see the [MicroBioMap vignette](https://seandavi.github.io/MicroBioMap/articles/overview.html).
-
 ### Other data sources
 
 The current collections provide access to vast microbiome data
@@ -346,6 +342,7 @@ resources. The output has to be converted into TreeSE/MAE separately.
 - [MGnifyR](https://github.com/beadyallen/MGnifyR) provides access to [EBI/MGnify](https://www.ebi.ac.uk/metagenomics/) 
 - [qiitr](https://github.com/cran/qiitr) provides access to [QIITA](https://qiita.com/about) 
 
+## Loading experimental microbiome data {#sec-loading-experimental-microbiome-data}
 ## Loading experimental microbiome data {#sec-loading-experimental-microbiome-data}
 
 ### 16S workflow
@@ -366,6 +363,8 @@ You can find full workflow script without further explanations and comments from
 
 ```{r dada2_1, include=FALSE}
 # Load objects
+seqtab.nochim <- readRDS(system.file("extdata", "dada2_seqtab.nochim", package = "OMA"))
+taxa <- readRDS(system.file("extdata", "dada2_taxa", package = "OMA"))
 seqtab.nochim <- readRDS(system.file("extdata", "dada2_seqtab.nochim", package = "OMA"))
 taxa <- readRDS(system.file("extdata", "dada2_taxa", package = "OMA"))
 ```
@@ -428,6 +427,7 @@ tse
 ```
 
 ### Import from external files {#sec-import-from-file}
+### Import from external files {#sec-import-from-file}
 
 Microbiome (taxonomic) profiling data is commonly distributed in
 various file formats. You can import such external data files as a
@@ -469,6 +469,9 @@ arbitrary; we refer here to the same names as in the examples:
 After you have set up the CSV files, you can read them in R:
 
 ```{r importingcsv1, message=FALSE}
+count_file  <- system.file("extdata", "assay_taxa.csv", package = "OMA")
+tax_file    <- system.file("extdata", "rowdata_taxa.csv", package = "OMA")
+sample_file <- system.file("extdata", "coldata.csv", package = "OMA")
 count_file  <- system.file("extdata", "assay_taxa.csv", package = "OMA")
 tax_file    <- system.file("extdata", "rowdata_taxa.csv", package = "OMA")
 sample_file <- system.file("extdata", "coldata.csv", package = "OMA")
@@ -561,6 +564,8 @@ Here we import metabolite data from the same study.
 ```{r importingcsv4, message=FALSE}
 count_file <- system.file("extdata", "assay_metabolites.csv", package = "OMA")
 sample_file <- system.file("extdata", "coldata.csv", package = "OMA")
+count_file <- system.file("extdata", "assay_metabolites.csv", package = "OMA")
+sample_file <- system.file("extdata", "coldata.csv", package = "OMA")
 
 # Load files
 counts  <- read.csv(count_file, row.names=1)  
@@ -590,13 +595,14 @@ mae
 
 Specific import functions are provided for:
 
--   Biom files (see `help(mia::importBIOM)`)
--   QIIME2 files (see `help(mia::importQIIME2)`)
--   Mothur files (see `help(mia::importMothur)`)
+-   Biom files (see `help(mia::loadFromBiom)`)
+-   QIIME2 files (see `help(mia::loadFromQIIME2)`)
+-   Mothur files (see `help(mia::loadFromMothur)`)
 
 #### Biom import
 
 Here we show how [Biom files](https://biom-format.org/) are imported into
+a TreeSE object using as an example Tengeler2020, which is further described in section [@sec-tengeler-desc]. This dataset consists of 3 files, which can be
 a TreeSE object using as an example Tengeler2020, which is further described in section [@sec-tengeler-desc]. This dataset consists of 3 files, which can be
 fetched or downloaded from
 [this repository](https://github.com/microbiome/data/tree/main/Tengeler2020):
@@ -609,6 +615,9 @@ To begin with, we store the data in a local directory within the working
 directory, such as _data/_, and define the source file paths.
 
 ```{r}
+biom_file_path <- system.file("extdata", "Aggregated_humanization2.biom", package = "OMA")
+sample_meta_file_path <- system.file("extdata", "Mapping_file_ADHD_aggregated.csv", package = "OMA")
+tree_file_path <- system.file("extdata", "Data_humanization_phylo_aggregation.tre", package = "OMA")
 biom_file_path <- system.file("extdata", "Aggregated_humanization2.biom", package = "OMA")
 sample_meta_file_path <- system.file("extdata", "Mapping_file_ADHD_aggregated.csv", package = "OMA")
 tree_file_path <- system.file("extdata", "Data_humanization_phylo_aggregation.tre", package = "OMA")
@@ -746,5 +755,5 @@ Conversion is possible between other data formats. Interested readers can refer 
 
 * [makeTreeSummarizedExperimentFromDADA2](https://microbiome.github.io/mia/reference/makeTreeSummarizedExperimentFromDADA2.html)  
 * [makeSummarizedExperimentFromBiom](https://microbiome.github.io/mia/reference/makeSummarizedExperimentFromBiom.html)  
-* [importMetaPhlAn](https://microbiome.github.io/mia/reference/importMetaPhlAn.html)  
-* [importQZA](https://microbiome.github.io/mia/reference/importQIIME2.html)
+* [loadFromMetaphlan](https://microbiome.github.io/mia/reference/loadFromMetaphlan.html)  
+* [readQZA](https://microbiome.github.io/mia/reference/loadFromQIIME2.html)
