--- a/inst/pages/06_packages.qmd
+++ b/inst/pages/06_packages.qmd
@@ -1,4 +1,5 @@
 # Packages {#sec-packages}
+# Packages {#sec-packages}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
@@ -7,7 +8,11 @@ chapterPreamble()
 
 ::: {layout-ncol=2}
 <img src="images/mia_logo.png" width="50%" alt="mia logo" align="middle" style="margin: 0 1em 0 1em" />
+::: {layout-ncol=2}
+<img src="images/mia_logo.png" width="50%" alt="mia logo" align="middle" style="margin: 0 1em 0 1em" />
 
+<img src="images/ecosystem.png" width="70%" alt="mia logo" align="middle" style="margin: 0 1em 0 1em" />
+:::
 <img src="images/ecosystem.png" width="70%" alt="mia logo" align="middle" style="margin: 0 1em 0 1em" />
 :::
 
@@ -19,6 +24,8 @@ The Bioconductor microbiome data science framework consists of:
 
 This section provides an overview of the package ecosystem. 
 [@sec-example-data] links to various open microbiome data resources
+This section provides an overview of the package ecosystem. 
+[@sec-example-data] links to various open microbiome data resources
 that support this framework.
 
 ## Package installation
@@ -27,8 +34,10 @@ You can install all packages that are required to run every example in this book
 
 ```{r eval=FALSE, message=FALSE}
 remotes::install_github('microbiome/OMA')
+remotes::install_github('microbiome/OMA')
 ```
 
+### Installing specific packages {#sec-packages_specific}
 ### Installing specific packages {#sec-packages_specific}
 
 You can install R packages of your choice with the following command
@@ -59,10 +68,6 @@ all available tools.
 devtools::install_github("microbiome/mia")
 ```
 
-If you encounter installation issue related to package dependencies please see the troubleshoot page [here](https://github.com/microbiome/OMA/blob/devel/PackageInstallations_Troubleshoots.qmd). 
-
-## Package ecosystem {#ecosystem}
-=======
 ## Package ecosystem {#sec-ecosystem}
 
 Methods for `(Tree)SummarizedExperiment` and `MultiAssayExperiment`
@@ -79,6 +84,7 @@ The mia package family provides general methods for microbiome data wrangling, a
 - [miaSim](https://microbiome.github.io/miaSim/): Microbiome data simulations [@Simsek2021]
 - [miaTime](https://microbiome.github.io/miaTime/): Microbiome time series analysis [@Lahti2021]
 
+### Differential abundance {#sec-sub-diff-abund}
 ### Differential abundance {#sec-sub-diff-abund}
 
 The following DA methods support `(Tree)SummarizedExperiment`.
@@ -103,4 +109,5 @@ The following DA methods support `(Tree)SummarizedExperiment`.
 ### Open microbiome data 
 
 Hundreds of published microbiome data sets are readily available in
+these data containers (see [@sec-example-data]).
 these data containers (see [@sec-example-data]).
