--- a/inst/pages/60_network_learning.qmd
+++ b/inst/pages/60_network_learning.qmd
@@ -9,13 +9,13 @@ Learning and analyzing microbial association networks is another common explorat
 
 A typical workflow for estimating a microbial network involves several steps, including data preprocessing, estimating microbial associations, and transforming them into edge weights. The resulting network can be analyzed using local network properties, such as centrality measures, or global measures that describe the overall structure of the network. Network plots provide further insight into the microbial community structure and allow for exploratory analysis of microbial relationships.
 
-In this chapter, we go through the complete workflow of constructing and analyzing a single microbial network, step by step. A potential next analysis task is to compare networks between groups, such as patients and controls, different environmental conditions, or different time points. How to compare networks between two groups is explained in [@sec-network-comparison].
+In this chapter, we go through the complete workflow of constructing and analyzing a single microbial network, step by step. A potential next analysis task is to compare networks between groups, such as patients and controls, different environmental conditions, or different time points. How to compare networks between two groups is explained in [@network-comparison].
 
 ## Network learning
 
 ### Typical workflow {#sec-network-learning-workflow}
 
-[@fig-network-workflow] shows the workflow for learning/constructing a microbial association network as proposed by @peschel2021netcomi. The respective steps are explained below.
+Figure [@fig-network-workflow] shows the workflow for learning/constructing a microbial association network as proposed by @peschel2021netcomi. The respective steps are explained below.
 
 ```{r network-workflow, echo=FALSE, out.width='100%', fig.cap='The typical input is a $p$ x $n$ dimensional count matrix coming from a sequencing process, where $n$ is the number of samples and $p$ the number of features / ASVs / OTUs. Steps 1 through 6 are explained below. Each matrix resulting from steps 4, 5, and 6 plays a specific role in the final network: The adjacency matrix is used for edge colors, dissimilarity for layout, and similarity for edge weights. In weighted networks, the similarity matrix equals the adjacency matrix.'}
 #| label: fig-network-workflow
@@ -26,22 +26,22 @@ knitr::include_graphics("images/FigureNetworkLearning.png")
 
 2.  **Normalization:** To avoid compositional effects, the data are normalized using a compositionality aware transformation. A common approach is the centered log-ratio (clr) transformation, which moves the data from a $p$-dimensional simplex to Euclidean space so that standard statistical analysis methods are valid. A variance stabilizing transformation (vst) is also a suitable approach for normalizing microbial count data [@badri2020shrinkage].
 
-3.  **Association estimation:** This is the crucial step in network learning to obtain statistical relations between the taxa. Common association measures include correlation, conditional dependence (which we will equate to partial correlation), and proportionality. Further information on these three types of association and their application can be found in [@sec-more-about-association]. The following list gives a selection of compositionality aware approaches:
+3.  **Association estimation:** This is the crucial step in network learning to obtain statistical relations between the taxa. Common association measures include correlation, conditional dependence (which we will equate to partial correlation), and proportionality. Further information on these three types of association and their application can be found in Section [@sec-more-about-association]. The following list gives a selection of compositionality aware approaches:
     + **Compositionality aware correlation estimation methods:**
       -   Pearson's correlation coefficient (+ normalization)
       -   Spearman's rank correlation coefficient (+ normalization)
       -   Covariance shrinkage ([corpcor](https://strimmerlab.github.io/software/corpcor/) package) (+ normalization)
-      -   SparCC (implemented in [SpiecEasi](https://rdrr.io/github/zdk123/SpiecEasi/man/sparcc.html)); applied in [@sec-sparcc-correlation]
+      -   SparCC (implemented in [SpiecEasi](https://rdrr.io/github/zdk123/SpiecEasi/man/sparcc.html)); applied in Section \@ref(sparcc-correlation)
       -   CCREPE ([ccrepe](https://bioconductor.org/packages/release/bioc/html/ccrepe.html) package)
       -   CCLasso ([R code on GitHub](https://github.com/huayingfang/CCLasso))
     + **Compositionality aware measures of conditional dependence / partial correlation:**
-      -   [SpiecEasi](https://github.com/zdk123/SpiecEasi) with Meinshausen and Bühlmann (MB) neighborhood selection; applied in [@sec-spieceasi-mb]
+      -   [SpiecEasi](https://github.com/zdk123/SpiecEasi) with Meinshausen and Bühlmann (MB) neighborhood selection; applied in Section \@ref(spieceasi-mb)
       -   [SpiecEasi](https://github.com/zdk123/SpiecEasi) with the graphical lasso (glasso)
       -   gCoda ([R code on GitHub](https://github.com/huayingfang/gCoda))
-      -   [SPRING](https://github.com/GraceYoon/SPRING); applied in [@sec-spring-network]
+      -   [SPRING](https://github.com/GraceYoon/SPRING); applied in Section \@ref(netcomi-spring)
     + **Proportionality measures (proportionality aware by definition):**
       - [propr](https://github.com/tpq/propr)
-      - [Shrinkage proportionality estimator](https://github.com/MichelleBadri/NormCorr-manuscript/blob/master/code/helpers/norm_functions.R); applied in [@sec-shrinkage-prop]
+      - [Shrinkage proportionality estimator](https://github.com/MichelleBadri/NormCorr-manuscript/blob/master/code/helpers/norm_functions.R); applied in Section \@ref(shrinkage-prop)    
         
 4.  **Sparsification:** Transforming the estimated associations directly into adjacencies would lead to a dense network where all nodes are connected and only weighted network measures are meaningful. Therefore, the association matrix is usually sparsified to select edges of interest. A common sparsification approach for correlations is thresholding, where correlations with a magnitude below the threshold are set to zero. Another possibility is a statistical test (Student's t-test or permutation test) with the null hypothesis that the correlation is equal to zero. SpiecEasi uses the StARS stability selection approach [@liu2010stability] to decide on an appropriate sparsification level of the inferred conditional dependence graph.
 
@@ -55,7 +55,7 @@ knitr::include_graphics("images/FigureNetworkLearning.png")
 
 The main association measure used in this chapter is the [SPRING](https://github.com/GraceYoon/SPRING) ("Semi-Parametric Rank-based approach for INference in Graphical model") method proposed by @yoon2019microbial. `SPRING` learns conditional dependency graphs for compositional data and follows the neighborhood selection method introduced by @meinshausen2006high ("MB"). We will show how to apply the method directly, as well as how to use it in conjunction with the R package [NetCoMi](https://github.com/stefpeschel/NetCoMi), which is specifically designed for the construction and analysis of networks for microbiome data.
 
-See [@sec-more-about-association] for a comparison of all three association types (correlation, partial correlation, and proportionality) with more information on each measure and applications.
+See Section [@sec-more-about-association] for a comparison of all three association types (correlation, partial correlation, and proportionality) with more information on each measure and applications.
 
 We demonstrate the workflow using the the **PeerJ data set** [@potbhare2022skin]. It contains skin microbial profiles of 58 subjects.
 
@@ -81,7 +81,7 @@ load(spring_networks_file)
 
 Three packages used in this chapter are available on GitHub only: `SpiecEasi`, `SPRING`, and `NetCoMi`. We recommend that you install these packages before proceeding.
 
-```{r install_packages, message=FALSE, warning=FALSE}
+```{r install_packages}
 if(!require(SpiecEasi)){
   devtools::install_github("zdk123/SpiecEasi")
 }
@@ -136,7 +136,7 @@ dim(tse)
 
 ### SPRING network {#sec-spring-network}
 
-As explained in [@sec-network-learning-workflow], we use [SPRING](https://github.com/GraceYoon/SPRING) ("Semi-Parametric Rank-based approach for INference in Graphical model") as association measure. We first use the `SPRING` function directly to construct a conditional dependency graph. 
+As explained in Section [@sec-network-learning-workflow], we use [SPRING](https://github.com/GraceYoon/SPRING) ("Semi-Parametric Rank-based approach for INference in Graphical model") as association measure. We first use the `SPRING` function directly to construct a conditional dependency graph. 
 
 Neither zero replacement nor normalization (steps 1 and 2 in our workflow) are required because SPRING uses a modified clr (mclr) transformation that can handle zero counts, and the correlation estimation method itself can also deal with zeros in the data. mclr is similar to the clr transformation except that mclr considers only the non-zero values. More precisely, the geometric mean is derived from positive values only, and zero counts remain zero after the transformation. This approach is similar to the "robust clr" (rclr) transformation included in the `vegan` package, except that mclr applies a positive shift to all non-zero values to make them strictly positive. See [@yoon2019microbial] for details.
 
@@ -168,11 +168,11 @@ rownames(spring_cor) <- colnames(spring_cor) <- rownames(tse)
 diag(spring_cor) <- 1
 ```
 
-As explained in [@sec-network-learning-workflow], the estimated associations are sparsified, transformed into dissimilarities, and finally transformed into similarities, which are the adjacency values. We write a function for these steps, which will be reused later.
+As explained in Section [@sec-network-learning-workflow], the estimated associations are sparsified, transformed into dissimilarities, and finally transformed into similarities, which are the adjacency values. We write a function for these steps, which will be reused later.
 
-Since `SPRING` already includes a sparsification approach, the `thresh` argument is not needed here, but will be needed in [@sec-more-about-association] for other association measures.
+Since `SPRING` already includes a sparsification approach, the `thresh` argument is not needed here, but will be needed in Section [@sec-more-about-association] for other association measures.
 
-To be consistent with the workflow, we provide two dissimilarity transformations: "signed" and "unsigned" (see [@sec-network-learning-workflow] for an explanation). These transformations were introduced by @vanDongen2012metric. We use the "signed" transformation in our examples so that strongly negatively associated genera have low edge weights.
+To be consistent with the workflow, we provide two dissimilarity transformations: "signed" and "unsigned" (see Section [@sec-network-learning-workflow] for an explanation). These transformations were introduced by @vanDongen2012metric. We use the "signed" transformation in our examples so that strongly negatively associated genera have low edge weights.
 
 The output of the function is an `igraph` object, which can be plotted and analyzed using functions from the `igraph` package.
 
@@ -215,9 +215,31 @@ transform_asso <- function(assoMat, thresh = NULL, dissTrans = "signed") {
 spring_graph <- transform_asso(spring_cor)$graph
 ```
 
+The graph object can now be plotted using the [igraph](https://r.igraph.org/) package, which is a state-of-the-art package for network analysis and visualization. Other packages that could be used for network plotting are the [qgraph](https://rdrr.io/cran/qgraph/) package or the [ggnet2](https://briatte.github.io/ggnet/) package. Since we will use igraph for network analysis later on, we are using its plotting function here as well.
+
+We use the Fruchterman-Reingold layout (a force-directed layout) for node placement. By placing strongly connected nodes close together and those with low edge weight far apart, this layout results in an easy-to-read network plot.
+
+The node size is proportional to a taxon's log10-transformed abundance, which we previously added to the `tse` object, averaged across all samples. The values are rescaled to be visually distinguishable.
+
+```{r, message=FALSE, warning=FALSE}
+library(igraph)
+```
+
+```{r nets_sparcc_prop_se, fig.height=5, fig.width=5}
+# Node sizes
+vsize <- (colMeans(t(assay(tse, "log10"))) + 1) * 3
+
+# Fruchterman-Reingold layout from igraph package
+set.seed(13075)
+lay_fr <- layout_with_fr(spring_graph)
+
+plot(spring_graph, layout = lay_fr, vertex.size = vsize, vertex.label = NA, 
+     main = "Conditional dependence graph\n(generated with SPRING)")
+```
+
 ### NetCoMi network {#sec-netcomi-spring}
 
-The [NetCoMi](https://github.com/stefpeschel/NetCoMi) [@peschel2021netcomi] package is specifically designed to construct, analyze, and compare networks for microbiome data and implements the complete workflow described in [@sec-network-learning-workflow]. Instead of using several functions for each of the steps, `NetCoMi` provides a single function for network construction (`netConstruct()`), so the package streamlines the workflow considerably. The user can choose from a variety of methods for data preprocessing, association estimation, sparsification, and transformation. The returned `microNet` object can then be passed to `netAnalyze()` (the network analysis function) so that all necessary information is available for the network analysis workflow.
+The [NetCoMi](https://github.com/stefpeschel/NetCoMi) [@peschel2021netcomi] package is specifically designed to construct, analyze, and compare networks for microbiome data and implements the complete workflow described in Section [@sec-network-learning-workflow]. Instead of using several functions for each of the steps, `NetCoMi` provides a single function for network construction (`netConstruct()`), so the package streamlines the workflow considerably. The user can choose from a variety of methods for data preprocessing, association estimation, sparsification, and transformation. The returned `microNet` object can then be passed to `netAnalyze()` (the network analysis function) so that all necessary information is available for the network analysis workflow.
  
 ```{r, message=FALSE, warning=FALSE}
 library(NetCoMi)
@@ -257,36 +279,7 @@ As before, the adjacency matrix is converted into an `igraph` object. Further st
 netcomi_graph <- SpiecEasi::adj2igraph(abs(netcomi_net$adjaMat1))
 ```
 
-```{r, eval=FALSE, echo=FALSE}
-save(spring_est, netcomi_net, file = "general/network_data/spring_networks.RData")
-```
-
-## Network analysis with igraph {#sec-network-analysis}
-
-The computed network is now analyzed using appropriate methods. We will first use the `igraph` package to analyze the `SPRING` network. NetCoMi's `netAnalyze()` function will be used later to analyze the constructed `microNet` object.
-
-### Network plot
-
-To get an overview of the network structure, a first common analysis method is to plot the network. We here use the [igraph](https://r.igraph.org/) package, which is a state-of-the-art package for network analysis and visualization. Other packages that could be used for network plotting are the [qgraph](https://rdrr.io/cran/qgraph/) package or the [ggnet2](https://briatte.github.io/ggnet/) package. Since we will use igraph for network analysis later on, we are using its plotting function here as well.
-
-We use the Fruchterman-Reingold layout (a force-directed layout) for node placement. By placing strongly connected nodes close together and those with low edge weight far apart, this layout results in an easy-to-read network plot.
-
-The node sizes are proportional to a taxon's log10-transformed abundance, which we previously added to the `tse` object, averaged across all samples. The values are rescaled to be visually distinguishable.
-
-Since we created two graph objects, one with SPRING and one with NetCoMi, we plot them side by side. The two plots should be identical.
-
-```{r, message=FALSE, warning=FALSE}
-library(igraph)
-```
-
-```{r plots_spring_netcomi, fig.height=4, fig.width=8}
-# Node sizes
-vsize <- (colMeans(t(assay(tse, "log10"))) + 1) * 3
-
-# Fruchterman-Reingold layout from igraph package
-set.seed(13075)
-lay_fr <- layout_with_fr(spring_graph)
-
+```{r nets_sparcc_se_spring, fig.height=4, fig.width=8}
 par(mfrow = c(1,2))
 plot(spring_graph, layout = lay_fr, vertex.size = vsize, 
      vertex.label = NA, main = "SPRING network")
@@ -294,49 +287,54 @@ plot(netcomi_graph, layout = lay_fr, vertex.size = vsize,
      vertex.label = NA, main = "NetCoMi network\n(with SPRING associations)")
 ```
 
-### Centrality measures
+The left network constructed directly with the `SPRING()` function and the right network constructed with `NetCoMi` are exactly the same.
 
-Centrality measures express the importance of nodes within the network. Common measures are the degree, betweenness, closeness, and eigenvector centrality. The `igraph` package provides functions to compute these measures. We wrap a function around the code to reuse it later.
+```{r, eval=FALSE, echo=FALSE}
+save(spring_est, netcomi_net, file = "general/network_data/spring_networks.RData")
+```
+
+## Network analysis {#sec-network-analysis}
+
+The computed network is now analyzed using appropriate methods. We will first use the `igraph` package to analyze the `SPRING` network. NetCoMi's `netAnalyze()` function will be used later to analyze the constructed `microNet` object.
+
+### Network analysis with igraph
+
+#### Centrality measures
+
+Centrality measures express the importance of nodes within the network. Common measures are the degree, betweenness, closeness, and eigenvector centrality. The `igraph` package provides functions to compute these measures.
 
 ```{r}
-get_centr <- function(graph_obj) {
-  # We access igraph directly with "::" because there are more packages loaded in 
-  # this chapter that contain a degree() function.
-  df <- data.frame(Degree = igraph::degree(graph_obj))
-  df$Betweenness <- betweenness(graph_obj)
-  df$Closeness <- closeness(graph_obj, normalized = TRUE)
-  df$Eigenvector <- eigen_centrality(graph_obj)$vector
-  return(df)
-}
+# We access igraph directly with "::" because there are more packages loaded in 
+# this chapter that contain a degree() function.
+centr_df <- data.frame(Degree = igraph::degree(spring_graph))
+centr_df$Betweenness <- betweenness(spring_graph)
+centr_df$Closeness <- closeness(spring_graph)
+centr_df$Eigenvector <- eigen_centrality(spring_graph)$vector
 
-centr_df <- get_centr(spring_graph)
 rownames(centr_df) <- rownames(spring_cor)
 head(centr_df, 15)
 ```
 
 The closeness centrality is "NaN" for some genera. These are unconnected nodes, as can be seen by the zero degree and betweenness centrality.
 
-### Scale node sizes by degree
+#### Scale node sizes by degree
 
 Centrality measures can be visualized in the network plot by scaling the node sizes according to one of these measures. We plot the `Spring` graph using the same layout as before and with the node sizes scaled according to all four centrality measures.
 
 Of the four centrality measures, only the degree has a range suitable to be used as node size. The other centrality measures must be rescaled because their range is either too small or too large. The following scaling is a suggestion that works for this example. The values might be adapted for other data sets.
 
 ```{r netplot_degree}
-get_vsizes <- function(centr_df) {
-  df <- as.matrix(centr_df)
-  df[, "Betweenness"] <- log(df[, "Betweenness"])
-  df[, "Closeness"] <- df[, "Closeness"] * 10
-  df[, "Eigenvector"] <- df[, "Eigenvector"] * 10
-  df[is.infinite(df) | is.na(df)] <- 0
-  return(df)
-}
+vsize_df <- as.matrix(centr_df)
+vsize_df[, "Betweenness"] <- log(vsize_df[, "Betweenness"])
+vsize_df[, "Closeness"] <- log(vsize_df[, "Closeness"] * 1000)
+vsize_df[, "Eigenvector"] <- vsize_df[, "Eigenvector"] * 10
 
-vsize_df <- get_vsizes(centr_df )
+vsize_df[is.infinite(vsize_df) | is.na(vsize_df)] <- 0
+
 head(vsize_df)
 ```
 
-```{r plots_centrality, fig.height=10, fig.width=10}
+```{r, fig.height=10, fig.width=10}
 par(mfrow = c(2,2))
 for (i in seq_along(centr_df)) {
   plot(spring_graph, layout = lay_fr, vertex.size = vsize_df[, i], 
@@ -344,37 +342,7 @@ for (i in seq_along(centr_df)) {
 }
 ```
 
-We observe that the two-node component at the bottom has a much higher closeness centrality than the nodes belonging to the main component of the network. Obviously, closeness centrality as commonly defined is misleading when the network consists of disconnected components. Nodes belonging to smaller components are seen as closer to others than in larger components. To overcome this problem, centrality values, and especially closeness centrality, are often calculated only for the largest connected component (LCC), which we will do below.
-
-```{r}
-# Extract the LCC
-dg_net <- igraph::decompose.graph(spring_graph)
-idx_lcc <- which.max(unlist(lapply(dg_net, function(x) length(igraph::V(x)))))
-lcc <- dg_net[[idx_lcc]]
-
-# Compute centrality values for the LCC
-centr_df_lcc <- get_centr(lcc)
-
-# Replace centrality values by those for LCC and set all others to zero
-lcc_nodes <- as.numeric(rownames(centr_df_lcc))
-centr_df[lcc_nodes, ] <- centr_df_lcc
-centr_df[-lcc_nodes, ] <- 0
-
-# Node/vertex sizes
-vsize_df <- get_vsizes(centr_df)
-```
-
-```{r plots_centrality_lcc, fig.height=10, fig.width=10}
-par(mfrow = c(2,2))
-for (i in seq_along(centr_df)) {
-  plot(spring_graph, layout = lay_fr, vertex.size = vsize_df[, i], 
-     vertex.label = NA, main = colnames(centr_df)[i])
-}
-```
-
-Note that `NetCoMi` follows a different approach to overcome this problem. `NetCoMi` uses the definition of closeness centrality proposed by [Tore Opsahl](https://toreopsahl.com/2010/03/20/closeness-centrality-in-networks-with-disconnected-components/), which is well defined even for disconnected networks and assigns higher closeness centrality values to nodes in larger components. This is more intuitive because nodes in a larger component are connected to a larger number of other nodes than in small components.
-
-### Degree distribution
+#### Degree distribution
 
 The degree distribution is another popular measure that expresses the probability distribution of degrees over the entire network. It thus provides insight into the overall network structure. We plot the degree distribution for all four association estimation methods to compare the network structure.
 
@@ -382,7 +350,7 @@ The degree distribution is another popular measure that expresses the probabilit
 library(ggplot2)
 ```
 
-```{r degree_dist_spring, fig.height=4, fig.width=7}
+```{r, fig.height=4, fig.width=7}
 # Compute degree distribution
 ddist<- igraph::degree.distribution(spring_graph)
 
@@ -398,7 +366,7 @@ ggplot(data = df, aes(x = Degree, y = Fraction, group = 1)) +
 
 The network has a large number of singletons and sparsely connected nodes, and only a small number of nodes with a higher degree of 7 or more.
 
-### Clustered heatmaps
+#### Clustered heatmaps
 
 Using the `ComplexHeatmap` package, we plot a heatmap of the association matrix estimated with `SPRING`. Rows and columns are sorted according to the clusters identified via hierarchical clustering.
 
@@ -430,11 +398,11 @@ Heatmap(adja_sel,
 
 The associations are generally quite low, and there are no prominent clusters detected by hierarchical clustering.
 
-### Global network measures
+#### Global network measures
 
 Global measures describe the overall network structure. We take a look at three common measures: density, transitivity, and average path length. The values are again computed with `igraph` functions.
 
-#### Density
+##### Density
 
 Definition: Proportion of present edges from all possible edges.
 
@@ -442,7 +410,7 @@ Definition: Proportion of present edges from all possible edges.
 edge_density(spring_graph)
 ```
 
-#### Transitivity (clustering coefficient)
+##### Transitivity (clustering coefficient)
 
 Here, we consider only the global clustering coefficient, which is defined as the ratio of triangles to connected triples.
 
@@ -450,7 +418,7 @@ Here, we consider only the global clustering coefficient, which is defined as th
 transitivity(spring_graph)
 ```
 
-#### Average path length
+##### Average path length
 
 Definition: Mean of the shortest distance between each pair of nodes.
 
@@ -458,7 +426,7 @@ Definition: Mean of the shortest distance between each pair of nodes.
 average.path.length(spring_graph)
 ```
 
-## Network analysis with NetCoMi
+### Network analysis with NetCoMi
 
 The `netcomi_net` object of class `microNet` created before is now passed to `netAnalyze()` to perform network analysis with `NetCoMi`.
 
@@ -521,7 +489,7 @@ legend(0.7, 1.1, cex = 1.7, title = "estimated correlation:",
 
 ### Highlight data features
 
-We now color nodes according to their phylum. The node sizes are proportional to a taxon's sum of mclr-transformed abundances. As already mentioned in [@sec-spring-network], this is the normalization method used by `SPRING`. A color palette from `RColorBrewer` is used here.
+We now color nodes according to their phylum. The node sizes are proportional to a taxon's sum of mclr-transformed abundances. As already mentioned in Section \@ref(spring-network), this is the normalization method used by `SPRING`. A color palette from `RColorBrewer` is used here.
 
 ```{r, message=FALSE, warning=FALSE}
 library(RColorBrewer)
@@ -616,7 +584,7 @@ sparcc_cor <- SpiecEasi::sparcc(t(assay(tse, "counts")))$Cor
 rownames(sparcc_cor) <- colnames(sparcc_cor) <- rownames(tse)
 ```
 
-We reuse the `transform_asso()` function created in [@sec-spring-network], which sparsifies the association matrix, transforms it into a similarity matrix, and finally returns an `igraph` object.
+We reuse the `transform_asso()` function created in Section \@ref(spring-network), which sparsifies the association matrix, transforms it into a similarity matrix, and finally returns an `igraph` object.
 
 Two threshold values are used to see the effect of sparsification later in the network plot.
 
@@ -720,14 +688,14 @@ plot(se_mb_graph, layout = lay_fr, vertex.size = vsize,
      vertex.label = NA, main = "SpiecEasi (MB)")
 ```
 
-**A few observations:**  
+**A view observations:**  
 The density of SparCC (threshold 0.4), proportionality and SpiecEasi is comparable, while the SparCC correlation network with threshold 0.3 is much denser. However, there are edges in the proportionality and SpiecEasi networks that are not present in the two SparCC networks. The SpiecEasi network has less highly connected nodes than the other three networks, but more nodes with one or two connections.
 
 We will look at the degree distribution in the next section to quantify these observations.
 
 ### Network analysis
 
-Here we repeat some of the network analysis approaches explained in [@sec-network-analysis]. The analyses are performed simultaneously for the three association measures as well as the SPRING network constructed in [@sec-spring-network]. Therefore, we start by creating a list of all the graph objects we need for the analyses.
+Here we repeat some of the network analysis approaches explained in Section \@ref(network-analysis). The analyses are performed simultaneously for the three association measures as well as the SPRING network constructed in Section \@ref(spring-network). Therefore, we start by creating a list of all the graph objects we need for the analyses.
 
 ```{r graphlist}
 graphlist <- list(SparCC = sparcc_graph04, 
@@ -744,7 +712,7 @@ The degree distribution is plotted for all four measures to compare the overall 
 library(ggplot2)
 ```
 
-```{r degree_dist}
+```{r}
 # Compute degree distributions
 ddlist <- lapply(graphlist, igraph::degree.distribution)
 
