some layout changes

--- a/inst/pages/19_visualization_techniques.qmd
+++ b/inst/pages/19_visualization_techniques.qmd
@@ -514,17 +514,14 @@ row_annotation <- ggplot(taxa_clusters) +
   geom_tile(aes(x = NA, y = Feature, fill = clusters)) +
   coord_equal(ratio = 1) +
   theme(
-        axis.text.x=element_blank(),
-        axis.text.y=element_blank(),
-        axis.ticks.y=element_blank(),
-        axis.title.y=element_blank(),
-        axis.title.x = element_text(angle = 90, vjust = 0.5, hjust=1),
-        plot.margin=margin(0,0,0,0),
+        axis.text.x = element_blank(),
+        axis.text.y = element_blank(),
+        axis.ticks.y = element_blank(),
+        axis.title.y = element_blank(),
+        axis.title.x = element_text(angle = 90, vjust = 0.5, hjust = 1),
+        plot.margin = margin(0, 0, 0, 0)
         ) +
       labs(fill = "Clusters", x = "Clusters")
-
-# to view the notation, run
-# row_annotation
 
 # Add sample names to one of the columns
 sample_data$sample <- factor(rownames(sample_data), levels = rownames(sample_data))
@@ -535,33 +532,28 @@ sample_types_annotation <- ggplot(sample_data) +
   geom_tile(aes(y = NA, x = sample, fill = sample_types)) +
   coord_equal(ratio = 1) +
   theme(
-        axis.text.x=element_blank(),
-        axis.text.y=element_blank(),
-        axis.title.x=element_blank(),
-        axis.ticks.x=element_blank(),
-        plot.margin=margin(0,0,0,0),
-        axis.title.y.right = element_text(angle=0, vjust = 0.5)
+        axis.text.x = element_blank(),
+        axis.text.y = element_blank(),
+        axis.title.x = element_blank(),
+        axis.ticks.x = element_blank(),
+        plot.margin = margin(0, 0, 0, 0),
+        axis.title.y.right = element_text(angle = 0, vjust = 0.5)
         ) +
       labs(fill = "Sample types", y = "Sample types")
-# to view the notation, run
-# sample_types_annotation
 
-# Create annotation plot
 sample_clusters_annotation <- ggplot(sample_data) +
   scale_y_discrete(position = "right", expand = c(0,0)) +
   geom_tile(aes(y = NA, x = sample, fill = clusters)) +
   coord_equal(ratio = 1) +
   theme(
-        axis.text.x=element_blank(),
-        axis.text.y=element_blank(),
-        axis.title.x=element_blank(),
-        axis.ticks.x=element_blank(),
-        plot.margin=margin(0,0,0,0),
-        axis.title.y.right = element_text(angle=0, vjust = 0.5)
+        axis.text.x = element_blank(),
+        axis.text.y = element_blank(),
+        axis.title.x = element_blank(),
+        axis.ticks.x = element_blank(),
+        plot.margin = margin(0, 0, 0, 0),
+        axis.title.y.right = element_text(angle = 0, vjust = 0.5)
         ) +
       labs(fill = "Clusters", y = "Clusters")
-# to view the notation, run
-# sample_clusters_annotation
 
 # Order data based on clusters and sample types
 mat <- mat[unfactor(taxa_clusters$Feature), unfactor(sample_data$sample)]
@@ -570,7 +562,7 @@ mat <- mat[unfactor(taxa_clusters$Feature), unfactor(sample_data$sample)]
 melted_mat <- melt(mat)
 colnames(melted_mat) <- c("Taxa", "Sample", "clr_z")
 
-# Determines the scaling of colorss
+# Determines the scaling of colors
 maxval <- round(max(abs(melted_mat$clr_z)))
 limits <- c(-maxval, maxval)
 breaks <- seq(from = min(limits), to = max(limits), by = 0.5)
@@ -579,13 +571,12 @@ colours <- c("darkblue", "blue", "white", "red", "darkred")
 heatmap <- ggplot(melted_mat) + 
   geom_tile(aes(x = Sample, y = Taxa, fill = clr_z)) +
   theme(
-    axis.title.y=element_blank(),
-    axis.title.x=element_blank(),
-    axis.ticks.y=element_blank(),
-    axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1),
-    
-    plot.margin=margin(0,0,0,0), # removes margins
-    legend.key.height= unit(1, 'cm')
+    axis.title.y = element_blank(),
+    axis.title.x = element_blank(),
+    axis.ticks.y = element_blank(),
+    axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1),
+    plot.margin = margin(0, 0, 0, 0), # removes margins
+    legend.key.height = unit(1, 'cm')
     ) +
   scale_fill_gradientn(name = "CLR + Z transform", 
                        breaks = breaks, 
