Fix pseudocount=1 for relabundance

--- a/inst/pages/11_taxonomic_information.qmd
+++ b/inst/pages/11_taxonomic_information.qmd
@@ -297,7 +297,7 @@ For a complete list of available transformations and parameters, see function
 tse <- tseGlobalPatterns
 tse <- transformAssay(tse, assay.type = "counts", method = "relabundance", pseudocount = 1)
 tse <- transformAssay(x = tse, assay.type = "relabundance", method = "clr", 
-                      pseudocount = 1, name = "clr")
+                      pseudocount = TRUE, name = "clr")
 
 head(assay(tse, "clr"))
 ```
