Fix pseudocount for clr transformation

--- a/inst/pages/21_microbiome_community.qmd
+++ b/inst/pages/21_microbiome_community.qmd
@@ -63,7 +63,7 @@ tse_phylum <- transformAssay(tse_phylum, assay.type = "counts",
                               method = "relabundance", pseudocount = 1)
 
 tse_phylum <- transformAssay(tse_phylum, assay.type = "relabundance",
-                              method = "clr", pseudocount = 1)
+                              method = "clr", pseudocount = TRUE)
 
 # Add z-transformation on features (taxa)
 tse_phylum <- transformAssay(tse_phylum, assay.type = "clr", 
